# cargo-server

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/simple-wasm-frontend-app/: app.css  app.js  example.wasm  index.html
src/: main.rs
